syntax = "proto3";// 协议为proto3

package proto;

// protoc 生成.go 指令
// cd 到xxx.proto 包
// protoc --go_out=plugins=grpc:./ ./userpb.proto

// 分号前是输出的.pb.go 文件的路径，路径不存在会自动创建
// 分号后是输出的.pb.go 文件的包名
option go_package = "./;proto";

// 服务注册和发现 定义发送请求信息
message PlatformServiceRequest{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 参数类型 参数名 标识号(不可重复)
  string key = 1; // 服务的key
}

// 服务注册和发现 定义响应信息
message PlatformServiceResponse{
  // 定义接收的参数
  // 参数类型 参数名 标识号(不可重复)
  int32 code = 1;
  string value = 2; // 服务的value
}

// 服务注册和发现
service PlatformService{
  rpc Route (PlatformServiceRequest) returns (PlatformServiceResponse){};
}